[package]
name = "fastforward"
version = "0.0.0-beta.1"
authors = ["Brian Mason <bpmason1@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1.29"
hyper = "0.11.0"
log = "0.3.0"
net2 = "0.2.33"
tokio-core = "0.1.17"
